# email-throttler-challenge-py

./: .envrc  .pre-commit-config.yaml  CHALLENGE.md  README.md  REVIEW.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/: actions.yml
.github/workflows/: actions.yml
docker/: api.dockerfile
src/email_throttle/api/: main.py
src/email_throttle/api/core/: app.py
src/email_throttle/api/endpoints/emails/: dependencies.py  dtos.py  router.py
src/email_throttle/api/endpoints/hello/: hello.py
src/email_throttle/cli/: cli.py  consumer.py  simulator.py
src/email_throttle/core/: entity.py  failover.py  service.py
src/email_throttle/core/abstract/: backoff.py  middleware.py  sender.py
src/email_throttle/core/middlewares/default/: circuit_breaker.py  rate_limiter.py  retry.py
src/email_throttle/infra/rabbit/: factories.py  handlers.py
src/email_throttle/vendors/: noop.py
tests/unit_tests/email_throttle/cli/: test_consumer.py  test_simulator.py
tests/unit_tests/email_throttle/core/: test_email_service.py  test_failover.py
tests/unit_tests/email_throttle/core/middlewares/default/: test_circuit_breaker.py  test_rate_limiter.py  test_retry.py
